Setup webpack and typescript

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
-  <script src="./script.js" defer></script>
   <title>WebGL Testing</title>
+  <script src="/js/bundle.js" defer></script>
   <style>
     * {
       margin: 0;
@@ -13,6 +12,8 @@
     }
     body {
       background-color: black;
+      /* display: flex; */
+      /* align-items: flex-start; */
     }
     canvas {
       display: block;
