Load simple block models

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,6 @@
     }
     body {
       background-color: black;
-      /* display: flex; */
-      /* align-items: flex-start; */
     }
     canvas {
       display: block;
@@ -25,6 +23,6 @@
 </head>
 <body>
   <canvas id="glcanvas" width="640" height="480"></canvas>
-  <canvas id="atlas" width="64" height="64"></canvas>
+  <canvas id="atlas"></canvas>
 </body>
 </html>
