Add resource manager and read assets from zip

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
       background-color: black;
       image-rendering: pixelated;
     }
+    @media screen and (min-width: 1152px) {
+      body {
+        display: flex;
+        align-items: flex-start;
+      }
+    }
   </style>
 </head>
 <body>
