--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Deepslate Demo</title>
-  <script src="./js/bundle.js" defer></script>
+  <script type="module" src="/src/App.ts"></script>
   <style>
     * {
       margin: 0;
