Fix and update demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,31 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Deepslate Demo</title>
-  <script type="module" src="/src/App.ts"></script>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      background-color: black;
-    }
-    #demo {
-      display: block;
-      width: 100vw;
-      height: 100vh;
-      border: none;
-      background-color: black;
-    }
-    @media screen and (min-width: 1152px) {
-      body {
-        display: flex;
-        align-items: flex-start;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <canvas id="demo" width="640" height="480"></canvas>
+  <nav>
+    <h1>Deepslate Demos</h1>
+    <ul>
+      <li><a href="./render/">Render Demo</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
