Add spline and multinoise demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,11 +7,17 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <nav>
-    <h1>Deepslate Demos</h1>
-    <ul>
-      <li><a href="./render/">Render Demo</a></li>
-    </ul>
-  </nav>
+  <header>
+    <h1>Deepslate Examples</h1>
+  </header>
+  <main>
+    <nav>
+      <ul>
+        <li><a href="./render/">Renderer</a></li>
+        <li><a href="./splines/">Splines</a></li>
+        <li><a href="./multinoise/">MultiNoise</a></li>
+      </ul>
+    </nav>
+  </main>
 </body>
 </html>
