Add noise, noise sampler, and generator demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,10 @@
       <ul>
         <li><a href="./render/">Renderer</a></li>
         <li><a href="./splines/">Splines</a></li>
+        <li><a href="./noise/">Noise</a></li>
         <li><a href="./multinoise/">MultiNoise</a></li>
+        <li><a href="./noisesampler/">Noise Sampler</a></li>
+        <li><a href="./generator/">Generator</a></li>
       </ul>
     </nav>
   </main>
