--- a/demo/index.html
+++ b/demo/index.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Deepslate demo</title>
 	<style>
+		body > * {
+			margin-bottom: 8px;
+		}
 		.row {
 			display: flex;
-			margin-bottom: 10px;
 			align-items: center;
 		}
 		canvas {
@@ -29,6 +31,7 @@
 		<canvas id="item-display" width="64" height="64"></canvas>
 		<input id="item-input" list="item-list" type="text" value="stone">
 	</div>
+	<canvas id="voxel-display" width="600" height="400"></canvas>
 	<canvas id="structure-display" width="600" height="400"></canvas>
 	<script src="./main.ts" type="module"></script>
 </body>
